tests/fail-dep/libc/prctl-threadname.stderr
error: Undefined Behavior: `prctl(PR_GET_NAME, name)` requires the `name` argument to be at least 16 bytes long
  --> tests/fail-dep/libc/prctl-threadname.rs:LL:CC
   |
LL |         libc::prctl(libc::PR_GET_NAME, buf.as_mut_ptr().cast::<libc::c_char>());
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `prctl(PR_GET_NAME, name)` requires the `name` argument to be at least 16 bytes long
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
   = note: BACKTRACE:
   = note: inside `main` at tests/fail-dep/libc/prctl-threadname.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to 1 previous error

